<resources>
    <string name="app_name">My Application Flash Light</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="flashlight_text">Turn On/Off Camera LED/Flashlight Android</string>
    <string name="byTimer">Run By Timer</string>
    <string name="timerSpinner">Choose time</string>
    <string name="flashlight_started">Flashlight started</string>
    <string name="flashlight_stopped">Flashlight stopped</string>
    <string name="timer_seconds">second(s)</string>
    <string name="timer_minutes">minute(s)</string>
    <string name="timer_hours">hour(s)</string>
    <string name="rus_language">Rus</string>
    <string name="eng_language">Eng</string>

    <string name="notification_text">FlashLight is run</string>
    <string name="setting_button_text">Settings</string>
    <string name="settings_goBack">Go Back</string>
    <string name="runSos">Run SOS</string>
    <string name="disableSos">Disable SOS</string>
    <string name="spinner_button_fragment_error_more">Cannot be more then %d</string>
    <string name="spinner_button_fragment_error_less">Cannot be less then %d</string>
    <string name="setting_add_button_text">Add new</string>
</resources>